sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: not found: value echanger
        echanger(i,i+1)
        ^AlgCocktailSort2:21: error: not found: value echanger
        echanger(i,i+1)
        ^