sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var n = getNombreValeurs()-2
  var d=0
  var ech = false
  do{
    ech=false
    for(i<-d to n)
    {
      if(!plusPetit(i,i+1))
      {
        echanger(i,i+1)
        ech=true
      }
    }
    n-1
    for(i<-n to d by -1)
    {
      if(!plusPetit(i,i+1))
      {
        echanger(i,i+1)
        ech=true
      }
    }
    d+=1
  }while(ech)
  
}